--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,7 +8,7 @@
         <header style="background-color:#FF0000; height:70px; width:100%">
         </header>
         <footer style="background-color:#00FF00; height:60px; width:100%; position:fixed; bottom:0">
-            <p style=" display: flex; justify-content: center; align-items: center;">Best School</p>
+            <p style=" display: flex; justify-content: center; align-items: center">Best School</p>
         </footer>
     </body>
 </html>
