Add missing </div>

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -89,6 +89,7 @@
                         <div class="max_guest">11 Guests</div>
                         <div class="number_rooms">4 Bedrooms</div>
                         <div class="number_bathrooms">4 Bathrooms</div>
+                    </div>
                     <div class="user"><b>Owner:</b> Nic</div>
                     <div class="description">
                         <p>
