Add missing </div>

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -97,6 +97,7 @@
                             Mt Martha Headland and across the bay to the Melbourne skyline. 
                             The 4 generous bedrooms can accommodate up to 11 guests comfortably.
                         </p>
+                    </div>
                 </article>
                 <article>
                     <h2>Cabins</h2>
@@ -115,6 +116,7 @@
                             where rattan furniture, swinging chairs, floor rugs, 
                             and a bar will make it hard to leave.
                         </p>
+                    </div>
                 </article>
                 <article>
                     <h2>Tiny homes</h2>
@@ -131,6 +133,7 @@
                             Set on the edge of a natural spring that runs into the Sturt River, 
                             this is the ideal spot for all nature lovers or those who try to connect with the nature.
                         </p>
+                    </div>
                 </article>
                 <article>
                     <h2>Lakefront</h2>
@@ -148,6 +151,7 @@
                             This is one impressive purpose built holiday house!
                             
                         </p>
+                    </div>
                 </article>
                 <article>
                     <h2>Mansions</h2>
@@ -166,6 +170,7 @@
                             This villa has state of the art home theater, game room, and 8 person hot tub 
                             with beautiful mountain views to enjoy after a long day on the slopes.
                         </p>
+                    </div>
                 </article>
                 <article>
                     <h2>Tree houses</h2>
@@ -185,6 +190,7 @@
                             Within the gated estate of Tudor in the Pines, 
                             the Pine Needle Treehouse can accommodate a MAXIMUM of 2 guests.
                         </p>
+                    </div>
                 </article>
             </section>
         </div>
