--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -6,8 +6,9 @@
         <style>
             body {margin:0; padding:0}
             header {background-color:#FF0000; height:70px; width:100%}
-            footer {background-color:#00FF00; height:60px; width:100%; position:absolute; bottom:0}
-            footer p {display: flex; justify-content: center; align-items: center}
+            footer {background-color:#00FF00; height:60px; width:100%; 
+                position:absolute; bottom:0;
+                display: flex; justify-content: center; align-items: center}
         </style>
     </head>
     <body>
